--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,13 +7,14 @@ services:
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.1/app
+        image: cinex47/beacon-backend
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
+            APP_DEBUG: true
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
@@ -25,15 +26,15 @@ services:
         depends_on:
             - mysql
     mysql:
-        image: 'mysql/mysql-server:8.0'
+        image: 'mysql/mysql-server'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_PASSWORD: 'XR2a3bWKEpzdpWLvRE1hxpOumNsvFne9hzodwEWRPUhzRRVArvBTU0fBItel5zpqikvH+E461/CQDNu4LDAuHg=='
             MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_PASSWORD: 'BQvkFgoe06+gfquf4idNKoBkoA8RmBgq/mEyEUB5usxZYGUBNYpziDo35tU/BRfdRyRfqETkRGcaGZsIMlUfXA=='
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
