--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,7 +14,8 @@ services:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
-            APP_DEBUG: true
+            APP_DEBUG: 'true'
+            APP_ENV : local
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
