--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -14,7 +14,7 @@ services:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
-            APP_DEBUG: false
+            APP_DEBUG: 'false'
             APP_ENV : production
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
