--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: laraveldb
+      MYSQL_DATABASE: ibeacon
       MYSQL_USER: laravel
       MYSQL_PASSWORD: laravelpassworddb
       MYSQL_ROOT_PASSWORD: rootpasswordmysql
